--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .App {
   text-align: center;
 }
-
+.navbar-brand{
+  color: none;
+  background-color: none;
+  justify-content: right;
+  align-content: center;
+  width: 20%;
+  border-radius: 80px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
