--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,55 @@
 .App {
   text-align: center;
+  gap: 20px;
 }
 
 .navbar-brand {
   color: none;
-  background-color: none;
-  justify-content: right;
+  background-color: yellow;
+  justify-content: center;
   align-content: center;
   width: 10%;
   border-radius: 100px;
   list-style: none;
 }
 
+.body-page{
+  background-image: url("/public/img/commerce-px-shopping-cart.jpg");
+  color: #282c34;
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+}
+
+
+
 
 .App-header {
   background-color: #282c34;
+  width: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: none ;
 }
 
 .App-link {
