--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,16 @@
 .App {
   text-align: center;
   gap: 20px;
+  padding: 20px;
 }
 
-.navbar-brand {
-  color: none;
-  background-color: yellow;
-  justify-content: center;
-  align-content: center;
-  width: 10%;
-  border-radius: 100px;
-  list-style: none;
+.container {
+  align-items: center;
+  padding: 20px;
 }
 
-.body-page{
+
+.body-page {
   background-image: url("/public/img/commerce-px-shopping-cart.jpg");
   color: #282c34;
   font-size: 1.5rem;
@@ -22,23 +19,14 @@
   text-align: center;
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   display: flex;
+  flex-direction: row;
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-
-
-
 
 .App-header {
   background-color: #282c34;
@@ -49,7 +37,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: none ;
+  color: none;
 }
 
 .App-link {
