--- a/src/Components/Counter/counter.css
+++ b/src/Components/Counter/counter.css
@@ -10,3 +10,52 @@
   padding: 5px;
   gap: 10px;
 }
+
+.counter-app > button {
+  background-color: none;
+  border: none;
+  font-size: small;
+  color: #282c34;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+}
+
+.counter-app > button:hover {
+  background-color: #282c34;
+  color: #61dafb;
+}
+
+.counter-app > button:active {
+  background-color: #282c34;
+  color: #61dafb;
+}
+
+.counter-app > button:focus {
+  background-color: #282c34;
+  color: #61dafb;
+}
+
+.counter-app > button:disabled {
+  background-color: #282c34;
+  color: #61dafb;
+}
+
+.counter-app > button:disabled:hover {
+  background-color: #282c34;
+  color: #61dafb;
+}
+
+.counter-app > button:disabled:active {
+  background-color: #282c34;
+  color: #61dafb;
+}  
