recupero sincro counter

--- a/src/Components/Item/items.css
+++ b/src/Components/Item/items.css
@@ -1,7 +1,7 @@
 .items {
     height:auto;
     width: 300px;;
-    background-color: #e6931f;
+    background-color: none;
     padding: 5px;
     color:black;
     text-shadow: gray;
