--- a/src/Components/Counter/counter.css
+++ b/src/Components/Counter/counter.css
@@ -5,29 +5,19 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background-color: none;
+  background-color: none !important;
+  border:solid;
+  border-color: cadetblue;
+  border-radius: 0%;
+  border-width: 100%;
   margin: 10px;
   padding: 5px;
   gap: 10px;
 }
 
 .counter-app > button {
-  background-color: none;
-  border: none;
-  font-size: small;
+  background-color: bisque;
   color: #282c34;
-  font-weight: 400;
-  line-height: 1.5;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  font-family: "Roboto", sans-serif;
 }
 
 .counter-app > button:hover {
