--- a/src/Pages/ItemDetail/itemDetail.css
+++ b/src/Pages/ItemDetail/itemDetail.css
@@ -1,61 +1,54 @@
 .box {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  background-color: gray;
+  justify-content: space-around;
+  background-color: transparent;
+  border: solid 0.2px black;
   margin-top: 50px;
-  padding: 5px;
+  padding: 5px; 
   gap: 10px;
-  width: auto;
+  width: 100%;
 }
 
 .detail-sku {
   display: flex;
   flex-direction: row;
-  background-color: blueviolet;
+  justify-content: space-between;
+  background-color: white;
   gap: 10px;
+  width: 80%;
 }
 .items {
-  background-color: rgb(222, 228, 155);
+  align-items: center;
+  background-color: transparent;
   font-stretch: condensed;
   border-radius: 5px;
   border: 1px solid black;
+  margin: 10px;
+  width: 100%;
 }
 
 .box2 {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  background-color: aquamarine;
-  padding: 5px;
+  width: 30%;
+  border-radius: 5px;
+  border: 1px solid black;
   gap: 10px;
   border-radius: 5px;
+  margin: 10px;
 }
 
 .img-sku {
-  width: 300px;
+  width: 200px;
+  height: 200px;
 }
 
 .desc-sku {
-  color: black;
-  font-size: 20px;
-  font-weight: bold;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
-}
-
-.precio-sku {
-  color: blue;
-  font-weight: bold;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
-  border: solid 0.2px blue;
-  border-radius: 15px;
-  font-weight: bold;
-  font-size: 50px;
-  width: 100%;
-  text-align: center;
+  display: flex;
 }
 
 .detail-sku {
@@ -66,7 +59,8 @@
 }
 
 .counter-detail {
-  color: blueviolet;
+  color: black;
+  justify-content: center;
   font-size: 20px;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
