--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  display: flex;
+  flex-wrap: wrap;
 }
