--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,16 +1,29 @@
 
 .navbar{
-    height: 50px;
-    position:fixed;
-    overflow: none;
+    background-color: #215fe6;
+    color: #ffffff;
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding: 0.5rem 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
+    z-index: 100;
+    font-style: oblique;
+
 }
   
   .navbar-brand .img {
-    width: 8%;
-    border-radius: 250px;
+    position:absolute;
+    top: 15%;
+    right: 0;
+    width: auto;
+    height: 55%;
+    border-radius: 300px;
     border: solid;
     border-color: black;
     border-width: 0.2px;    
