--- a/src/Pages/ItemDetail/itemDetail.css
+++ b/src/Pages/ItemDetail/itemDetail.css
@@ -1,3 +1,12 @@
+
+.img-bt{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  
+}
 .box {
   display: flex;
   flex-direction: row;
@@ -11,6 +20,14 @@
   width: 100%;
 }
 
+@media only screen and (max-width: 1000px){
+ .box{
+  margin-top: 80px;
+  flex-direction: column;
+ }
+}
+
+
 .detail-sku {
   display: flex;
   flex-direction: row;
@@ -18,6 +35,10 @@
   background-color: white;
   gap: 10px;
   width: 80%;
+  font-size: 15px;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
 }
 .items {
   align-items: center;
@@ -42,6 +63,13 @@
   margin: 10px;
 }
 
+@media only screen and (max-width: 500px){
+  .box2 {
+    flex-wrap: nowrap;
+   flex-direction: column;
+ }
+ }
+
 .img-sku {
   width: 200px;
   height: 200px;
@@ -51,12 +79,17 @@
   display: flex;
 }
 
-.detail-sku {
-  font-size: 15px;
+.precio-sku{
+  display:flex;
+  justify-content: center; 
+  align-items: center;
+  font-size: 20px;
   font-weight: bold;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
+  width: 50%;
+  margin-top: 15px;
 }
+
+
 
 .counter-detail {
   color: black;
