--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -14,10 +14,12 @@
     right: 0;
     z-index: 100;
     font-style: oblique;
+    list-style: none;
 
 }
   
   .navbar-brand .img {
+    
     position:absolute;
     top: 15%;
     right: 0;
