--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -5,9 +5,10 @@
   height: auto;
   justify-content: center;
   margin-top: 80px;
+  margin-left: 250px;
   border: solid 1px white;
   border-radius: 10px;
-  padding: 50%;
+  padding: 10%;
   background-color: rgb(73, 107, 175);
   background: linear-gradient(
     90deg,
@@ -24,20 +25,23 @@
   border-radius: 10px;
   background-color: aquamarine;
   width: 100%;
+  text-align: center;
 }
 
 .cart-inside {
+  padding: 10px;
  justify-content: center;
 }
 
 .img-sku-cart {
-  width: 30px;
+  width: 56px;
   height: 30px;
   border-radius: 10px;
   align-items: center;
   justify-content: flex-start;
 }
 .detail-sku {
+  align-content: center;
   font-size: large;
   font-weight: bold;
 }
@@ -53,4 +57,13 @@
   align-items: center;
   border: solid 1px white;
   border-radius: 10px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
