--- a/src/Components/Item/items.css
+++ b/src/Components/Item/items.css
@@ -6,6 +6,7 @@
   justify-content: center;
   background-color: none;
   border: solid 0.2px black;
+  border-radius: 10px;
   margin-top: 30px;
   padding: 5px;
   gap: 10px;
