--- a/src/Pages/ItemDetail/itemDetail.css
+++ b/src/Pages/ItemDetail/itemDetail.css
@@ -1,43 +1,40 @@
-
-.img-bt{
+.img-bt {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
   border-radius: 10px;
-  
 }
 .box {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-around center;
   background-color: transparent;
   border: solid 0.2px black;
   margin-top: 50px;
-  padding: 5px; 
+  padding: 5px;
   gap: 10px;
-  width: 100%;
+  width: 90%;
 }
 
-@media only screen and (max-width: 1000px){
- .box{
-  margin-top: 80px;
-  flex-direction: column;
- }
+@media only screen and (max-width: 1000px) {
+  .box {
+    margin-top: 80px;
+    flex-direction: column;
+  }
 }
-
 
 .detail-sku {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: rgb(210, 241, 249);
+  background-color: white;
   border: solid 0.2px black;
   border-radius: 10px;
-  gap: 10px;
-  width: 80%;
+  gap: 5px;
+  width: 90%;
   font-size: 15px;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
@@ -51,15 +48,17 @@
   border: 1px solid black;
   padding: 5px;
   margin: 10px;
-  width: 100%;
+  width: 90%;
 }
 
 .box2 {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 90%;
+  height: 60%;
+  padding: 15px;
   border-radius: 5px;
   border: 1px solid black;
   gap: 20px;
@@ -67,34 +66,35 @@
   margin: 10px;
 }
 
-@media only screen and (max-width: 500px){
+@media only screen and (max-width: 500px) {
   .box2 {
     flex-wrap: nowrap;
-   flex-direction: column;
- }
- }
+    flex-direction: column;
+  }
+}
 
 .img-sku {
-  width: 280px;
-  height: 150px;
+  width: 373px;
+  height: 200px;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .desc-sku {
   display: flex;
+  padding: 10px;
+  width: 100%;
 }
 
-.precio-sku{
-  display:flex;
-  justify-content: center; 
+.precio-sku {
+  display: flex;
+  justify-content: center;
   align-items: center;
   font-size: 20px;
   font-weight: bold;
-  width: 50%;
+  width: 100%;
   margin-top: 15px;
 }
-
-
 
 .counter-detail {
   color: black;
