--- a/src/Components/Counter/counter.css
+++ b/src/Components/Counter/counter.css
@@ -5,19 +5,16 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background-color: none !important;
-  border:solid;
-  border-color: cadetblue;
-  border-radius: 0%;
-  border-width: 100%;
+  background-color: none;
   margin: 10px;
   padding: 5px;
-  gap: 10px;
+  gap: 5px;
 }
 
 .counter-app > button {
   background-color: bisque;
   color: #282c34;
+  border-radius: 30%;
 }
 
 .counter-app > button:hover {
