--- a/src/Pages/ItemDetail/itemDetail.css
+++ b/src/Pages/ItemDetail/itemDetail.css
@@ -1,9 +1,11 @@
 .img-bt {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  width: 50%;
   border-radius: 10px;
 }
 .box {
@@ -11,12 +13,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around center;
-  background-color: transparent;
+  background-color: white;
   border: solid 0.2px black;
-  margin-top: 50px;
-  padding: 5px;
+  border-radius: 10px;
+  margin: 5%;
+  padding: 2%;
   gap: 10px;
-  width: 90%;
+  width: 80%;
+  height: 50%;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -29,12 +33,14 @@
 .detail-sku {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
-  background-color: white;
+  background-color: none;
   border: solid 0.2px black;
   border-radius: 10px;
   gap: 5px;
-  width: 90%;
+  width: 80%;
+  padding: 1%;
   font-size: 15px;
   font-weight: bold;
   font-family: "Roboto", sans-serif;
@@ -42,28 +48,28 @@
 }
 .items {
   align-items: center;
-  background-color: transparent;
+  background-color: none;
   font-stretch: condensed;
   border-radius: 5px;
   border: 1px solid black;
-  padding: 5px;
+  padding: 1%;
   margin: 10px;
-  width: 90%;
+  width: 100%;
 }
 
 .box2 {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: inline-flex;
+  flex-direction: row;
   align-items: center;
-  width: 90%;
-  height: 60%;
-  padding: 15px;
+  width: 100%;
+  height: 50%;
+  padding: 5px;
   border-radius: 5px;
   border: 1px solid black;
-  gap: 20px;
+  gap: 5px;
   border-radius: 5px;
   margin: 10px;
+  background-color: none;
 }
 
 @media only screen and (max-width: 500px) {
@@ -87,13 +93,27 @@
 }
 
 .precio-sku {
-  display: flex;
+  display: inline;
   justify-content: center;
   align-items: center;
   font-size: 20px;
   font-weight: bold;
-  width: 100%;
+  width: 40%;
   margin-top: 15px;
+}
+
+.precioT-sku{
+  display: inline;
+  justify-content: center;
+  font-size: 30px;
+  word-wrap: normal;
+  align-items: center;
+  width: 60%;
+  margin-top: 2%;
+  background-color: blured;
+  border: dotted 0.2px black;
+  border-radius: 10px;
+  padding: 1%;
 }
 
 .counter-detail {
@@ -103,4 +123,12 @@
   font-weight: bold;
   font-family: "Roboto", sans-serif;
   font-style: italic;
+}
+
+.button-cart{
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
