--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -36,3 +36,10 @@
     border: none;
    
   }
+
+  @media screen and (max-width: 600px){
+    .navbar-brand .img {
+      display: none;
+    }
+    
+  }
