--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -107,3 +107,10 @@
   padding: 10px;
   border-radius: 10px;
 }
+
+@media screen and (max-width: 768px) {
+  .cart-box {
+    width: 100%;
+    margin-left: 0px;
+  }
+}
