--- a/src/Components/Item/items.css
+++ b/src/Components/Item/items.css
@@ -36,3 +36,12 @@
     height: 150px;
     border-radius: 10px;
 }
+
+/* mobile responsive */
+@media only screen and (max-width: 1000px) {
+  .item-box {
+    flex-direction: column;
+    margin-top: 80px;
+    margin-right: 50px;
+  }
+}
