--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,45 +1,66 @@
-
-.navbar{
-    background-color: #215fe6;
-    color: #ffffff;
-    font-size: 1.5rem;
-    font-weight: 600;
-    padding: 0.5rem 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    font-style: oblique;
-    list-style: none;
-
+.navbar {
+  background-color: #215fe6;
+  color: #ffffff;
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding: 0.5rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  font-style: oblique;
+  list-style: none;
 }
-  
+
+.navbar-brand .img {
+  position: absolute;
+  top: 15%;
+  right: 0;
+  width: auto;
+  height: 55%;
+  border-radius: 300px;
+  border: solid;
+  border-color: black;
+  border-width: 0.2px;
+}
+
+.dropdown {
+  background-color: none;
+  border: none;
+}
+
+/* mobile responsive */
+@media only screen and (max-width: 1000px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+    padding: 0.5rem 0;
+  }
+  .navbar-brand {
+    margin-bottom: 1rem;
+  }
   .navbar-brand .img {
-    
-    position:absolute;
+    position: absolute;
     top: 15%;
     right: 0;
-    width: auto;
-    height: 55%;
+    width: 20%;
+    height: 20%;
     border-radius: 300px;
     border: solid;
     border-color: black;
-    border-width: 0.2px;    
+    border-width: 0.2px;
   }
-
-  .dropdown{
-    background-color: none;
-    border: none;
-   
+  .navbar-nav {
+    width: 100%;
   }
-
-  @media screen and (max-width: 600px){
-    .navbar-brand .img {
-      display: none;
-    }
-    
+  .navbar-nav .nav-item {
+    width: 100%;
   }
+  .navbar-nav .nav-item .nav-link {
+    text-align: center;
+  }
+}
