--- a/src/Pages/ItemDetail/itemDetail.css
+++ b/src/Pages/ItemDetail/itemDetail.css
@@ -23,13 +23,6 @@
   height: 50%;
 }
 
-@media only screen and (max-width: 1000px) {
-  .box {
-    margin-top: 80px;
-    flex-direction: column;
-  }
-}
-
 .detail-sku {
   display: flex;
   flex-direction: column;
@@ -72,12 +65,6 @@
   background-color: none;
 }
 
-@media only screen and (max-width: 500px) {
-  .box2 {
-    flex-wrap: nowrap;
-    flex-direction: column;
-  }
-}
 
 .img-sku {
   width: 373px;
@@ -131,4 +118,46 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+/* mobile responsive */
+@media screen and (max-width: 768px) {
+  .img-bt {
+    width: 100%;
+  }
+  .box {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .detail-sku {
+    width: 100%;
+  }
+  .items {
+    width: 100%;
+  }
+  .box2 {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .img-sku {
+    width: 100%;
+    height: 100%;
+  }
+  .desc-sku {
+    width: 100%;
+  }
+  .precio-sku {
+    width: 100%;
+  }
+  .precioT-sku {
+    width: 100%;
+  }
+  .counter-detail {
+    width: 100%;
+  }
+  .button-cart {
+    width: 100%;
+  }
 }
