--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -16,3 +16,14 @@
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.5);
   }
+
+  /* make form-box responsive for mobile, and center it  */
+  @media screen and (max-width: 600px) {
+    .form-box {
+      margin-left: 0;
+      width: 100%;
+      height: 100%;
+      justify-content: center;
+      align-items: center;
+    }
+  }
